# simple_mcp_client

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst
examples/: README_searchapi_integration.md  SEARCHAPI_INTEGRATION_SUMMARY.md  basic_usage.py  multi_server_demo.py  searchapi_integration_demo.py  security_demo.py  setup_searchapi_demo.py  test_searchapi_integration.py
src/simple_mcp_client/: __init__.py
src/simple_mcp_client/cli/: __init__.py  main.py
src/simple_mcp_client/config/: __init__.py  server_config.py
src/simple_mcp_client/core/: __init__.py  client.py  multi_client.py
src/simple_mcp_client/security/: __init__.py  lakera_client.py  security_manager.py
src/simple_mcp_client/utils/: __init__.py  helpers.py
tests/: __init__.py  test_client.py  test_security.py  test_utils.py
