[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-mcp-client"
version = "0.1.0"
description = "A simple MCP (Model Context Protocol) client implementation with integrated security screening using Lakera Guard"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Stephen Giguere", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]
security = [
    "requests>=2.25.0",  # Already included in main dependencies
]

[project.scripts]
simple-mcp-client = "simple_mcp_client.cli.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/simple_mcp_client"
Repository = "https://github.com/yourusername/simple_mcp_client"
Documentation = "https://simple-mcp-client.readthedocs.io"
Issues = "https://github.com/yourusername/simple_mcp_client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_mcp_client"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["simple_mcp_client"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/simple_mcp_client",
    "--cov-report=term-missing",
    "--cov-report=html",
] 